--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -1,1 +1,15 @@
 // app global css in SCSS form
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: $dark;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $primary;
+  border-radius: 10px;
+}
