--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -23,3 +23,7 @@ $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
+
+$main: #17212b;
+$main-secondary: #1f2936;
+$main-dark: #0e1621;
