--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1976d2;
+$primary: #17212b;
 $secondary: #26a69a;
-$accent: #9c27b0;
+$accent: #2b5278;
 
 $dark: #1d1d1d;
 $dark-page: #121212;
@@ -27,3 +27,4 @@ $warning: #f2c037;
 $main: #17212b;
 $main-secondary: #1f2936;
 $main-dark: #0e1621;
+$self-message: #2b5278;
