feat: MVP version of messenger

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,8 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #17212b;
-$secondary: #26a69a;
+//$primary: #17212b;
+$primary: #1976d2;
+$secondary: #17212b;
 $accent: #2b5278;
 
 $dark: #1d1d1d;
