--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -2,21 +2,11 @@
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: $primary;
 }
 
-::-webkit-scrollbar {
-  width: 12px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: $main-dark;
-  //border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: $primary;
-  //border-radius: 10px;
+img {
+  object-fit: cover;
 }
 
 .bg-main {
